# ayum.ppcat

./: .gitignore  CMakeLists.txt  cmake-variants.yaml  package-lock.json  package.json  pmm.cmake
src/: CMakeLists.txt
src/app/: CMakeLists.txt  frontend.cpp  frontend.hpp  frontend.test.cpp  main.cc  main.cpp  main.hpp  main.test.cpp
src/aym/: CMakeLists.txt  dld.cpp  dld.hpp  dld.test.cpp
src/napi/: CMakeLists.txt
src/ppcat/: CMakeLists.txt  project.cpp.in  project.hpp.in
src/ppcat/app/: CMakeLists.txt  applicator.cpp  applicator.hpp  applicator.test.cpp  backend.cpp  backend.hpp  backend.test.cpp  cli.cpp  cli.hpp  cli.test.cpp  frontend.cpp  frontend.hpp  frontend.test.cpp  main.cc  main.cpp  main.hpp  main.test.cpp  picker.cpp  picker.hpp  picker.test.cpp
src/ppcat/backend/: CMakeLists.txt  backend.cpp  backend.hpp  backend.test.cpp  picker.cpp  picker.hpp  picker.test.cpp
src/ppcat/cli/: CMakeLists.txt  backend.cpp  backend.hpp  backend.test.cpp  cli.cpp  cli.hpp  main.cc  main.cpp  main.hpp  main.test.cpp  parser.cpp  parser.hpp  parser.test.cpp  picker.cpp  picker.hpp  picker.test.cpp  reaper.cpp  reaper.hpp  reaper.test.cpp
src/ppcat/common/: CMakeLists.txt  config.hpp  constants.hpp
src/ppcat/common/cli/: CMakeLists.txt  cli.cpp  cli.hpp
src/ppcat/common/log/: CMakeLists.txt  log.cpp  logging.cpp  logging.hpp
src/ppcat/engine/scripting/: CMakeLists.txt  engine.cpp  engine.hpp  engine.startup.hpp  engine.test.cpp
src/ppcat/napi/: CMakeLists.txt  hello.js  main.cc
src/ppcat/picker/: CMakeLists.txt
tools/vcpkg/ports/ayum/: CONTROL  portfile.cmake
